# airbnb-oslo

./: .gitignore  .pre-commit-config.yaml  Data_Set_Introduction.ipynb  LICENSE.md  MLP.ipynb  Model_Introduction.ipynb  README.md  data-cleaning.py  eda_listings.ipynb  eda_listings.py  environment.yml  pyproject.toml  setup.cfg  simple-model.py
data-clean/: X_test.pkl  X_test_sklearn.npy  X_train_sklearn.npy  X_train_val.pkl  cnn_predictions.pkl  cnn_pretrained_predictions.pkl  data-cleaning.py  data_cleaning.py  feature-processing.py  feature_processing.py  feature_selection.py  front_page_pictures.pkl  front_page_urls.pkl  listings_extended.pkl  listings_processed.pkl  listings_subset.pkl  listings_train.pt  listings_train_pandas.pkl  listings_train_pytorch.pt  listings_val.pt  listings_val_pandas.pkl  listings_val_pytorch.pt  neighbourhoods.pkl  pytorch_preprocessing.py  reviews_features.pkl  reviews_features.py  scrape_pictures.py  sentiment_analysis.ipynb  testset_pytorch.pt  trainset_pytorch.pt  y_test.pkl  y_test_sklearn.npy  y_train_sklearn.npy  y_train_val.pkl
data-munich/: munich_X_test.pkl  munich_X_train_val.pkl  munich_data_cleaning.py  munich_feature_selection.py  munich_review_languages.pkl  munich_reviews_features.ipynb  munich_y_test.pkl  munich_y_train_val.pkl
data-raw/: listings.csv  neighbourhoods.csv  reviews.csv
exploratory/: amenities.py  eda_listings.py  getting_started.py  sentiment_analysis.ipynb  text_cleaning.py
models/: benchmark_models.py  classical-models.py  classical_models.py  classical_models_extended.ipynb  cnn.py  metric_NN.py  (+56 more)
(+112 files in other folders)
