[metadata]
name = airbnb_oslo
version = 0.0.1
author = Joel Beck, Marei Freitag
author_email = joel.beck@stud.uni-goettingen.de
description = Price Prediction Models for Airbnb Apartments in Oslo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joel-beck/airbnb-oslo
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
install_requires =
    matplotlib >= 3.5
    nltk >= 3.6
    numpy >= 1.22
    pandas >= 1.4
    pillow >= 9.0
    torch >= 1.10
    scikit-learn >= 1.0
    seaborn >= 0.11
    wordcloud >= 1.8

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pre-commit
    pytest
    pytest-cov
    pyupgrade
data =
    beautifulsoup4 >= 4.10
    gender_guesser >= 0.4
    geopandas >= 0.10
    langdetect >= 1.0
    requests >= 2.27
    tqdm >= 4.62
    transformers >= 4.16

[flake8]
max-line-length = 88
